# atlite-profiles-api

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  ruff.yml  tests.yml
Custom_turbines/: Vestas_v25_edit.yaml
cache/: turbines.json
config/: api.yaml  cutouts.yaml  expand_cutouts.py
core/: catalog.py  cutout_processing.py  models.py  profile_generator.py  storage.py  technology.py
custom_turbines/: Vestas_V162_5.6.yaml  WES50.yaml
deploy/: Caddyfile  start.sh
docs/: api.md  cli.md  deployment.md  index.md
service/: __init__.py  api.py  cli.py  logging_utils.py  runner.py
service/api/: __init__.py  app.py  catalog.py  cutout_metadata.py  openapi.py  schemas.py
service/api/routers/: __init__.py  cutouts.py  generate.py  health.py  solar.py  turbines.py
tests/: test_api.py  test_api_catalog.py  test_cli.py  test_models.py  test_profile_generator.py  test_runner.py
