[project]
name = "renewables-profiles-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atlite==0.2.14",
    "jupyter==1.1.1",
    "kaleido==0.2.1",
    "plotly==5.24.1",
    "pypsa==0.32.0",
    "seaborn==0.13.2",
]
