[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "renewables-profiles-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atlite==0.4.1",
    "cdsapi==0.7.7",
    "cfgrib==0.9.15.1",
    "fastapi[standard]==0.128.4",
    "jupyter==1.1.1",
    "kaleido==1.2.0",
    "plotly==6.5.2",
    "pydantic==2.12.5",
    "pypsa==1.0.7",
    "rich==14.3.2",
    "seaborn==0.13.2",
    "typer==0.21.1",
    "uvicorn==0.40.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.20",
    "pre-commit==4.3.0",
    "pytest==8.4.1",
    "ruff==0.12.11",
]

[project.scripts]
profiles-cli = "service.cli:app"
profiles-api = "service.api:serve"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.hatch.build.targets.wheel]
packages = ["service", "core"]
